Fixs navbar link disappearing after responsive mode activated

--- a/styles/partials/navbar.css
+++ b/styles/partials/navbar.css
@@ -30,6 +30,11 @@
   display: flex;
   justify-content: center;
 }
+@media (min-width: 801px) {
+  #yw-topnav .links-container {
+    display: flex !important;
+  }
+}
 @media (max-width: 800px) {
   #yw-topnav {
     padding: 0;
