--- a/styles/components/tables.css
+++ b/styles/components/tables.css
@@ -23,6 +23,20 @@
   .table-responsive { border:none !important };
 }
 
+.table-condensed thead tr > th, .table-condensed thead tr > td {
+  padding-top: .5em !important;
+  padding-bottom: .5em !important;
+}
+
+table.dataTable.table-condensed .sorting:after,
+table.dataTable.table-condensed .sorting_asc:after,
+table.dataTable.table-condensed .sorting_desc:after  {
+  top: 8px !important;
+  right: 4px !important;
+}
+table.dataTable .prevent-sorting:after {
+  display: none !important;
+}
 
 /* Datatbles */
 
@@ -86,11 +100,4 @@
   background-color: var(--primary-color) !important;
   color: var(--neutral-light-color) !important;
   opacity: .8;
-}
-
-table.dataTable.table-condensed .sorting:after,
-table.dataTable.table-condensed .sorting_asc:after,
-table.dataTable.table-condensed .sorting_desc:after {
-  top: initial !important;
-  bottom: 6px;
 }
