--- a/styles/partials/admin.css
+++ b/styles/partials/admin.css
@@ -42,11 +42,6 @@ label.edit-group strong {
 .table-condensed.table-updates tr > td:last-child {
   text-align: center;
 }
-.table-condensed.table-updates tr > th {
-  padding-top: .5em;
-  padding-bottom: .5em;
-  color: var(--secondary-color-1);
-}
 
 @media (max-width: 1200px) {
   td > label { padding-left: .2rem; }
@@ -63,10 +58,8 @@ label.edit-group strong {
   margin: 0 0 .5rem 0;
 }
 
-.gerer-theme thead > tr > th:first-child {
-  padding-left: .8rem;
-  padding-bottom: 0;
-}
-.gerer-theme thead > tr > th:first-child > label {
-  margin-bottom: -30px;
+table .check-all-container {
+  position: absolute;
+  top: 8px;
+  left: 15px;
 }
