--- a/styles/margot.css
+++ b/styles/margot.css
@@ -22,6 +22,7 @@
 @import 'templates/facette.css';
 @import 'templates/accordion.css';
 @import 'templates/search.css';
+@import 'templates/annuaire.css';
 
  /*
  * CSS variables
