--- a/styles/components/forms.css
+++ b/styles/components/forms.css
@@ -235,7 +235,7 @@ form .col-sm-9 {
   margin-left: .3rem;
   margin-right: 3px;
 }
-.input-group .form-control:last-child, .input-group-addon:last-child, .input-group-btn:first-child > .btn-group:not(:first-child) > .btn, .input-group-btn:first-child > .btn:not(:first-child), .input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group > .btn, .input-group-btn:last-child > .dropdown-toggle {
+.input-group-addon:last-child{
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   border: 2px solid var(--primary-color);
