--- a/styles/templates/calendar.css
+++ b/styles/templates/calendar.css
@@ -55,7 +55,7 @@
   font-size: .8em;
   padding: 2px 5px 1px 5px !important;
   border: 2px solid white;
-  margin: .6em 5px 0 5px;
+  margin: 4px 4px 0 4px;
   border-radius: 2px;
 }
 .fc-event-container a .fc-content {
@@ -145,7 +145,7 @@ tr .fc-event-container:nth-child(7) a { background-color: var(--secondary-color-
   display: none;
 }
 .fc-week tr:first-child>td>.fc-day-grid-event {
-  margin-top: 8px;
+  /*margin-top: 8px;*/
 }
 .fc-agenda-view .fc-day-grid .fc-row .fc-content-skeleton {
   padding-bottom: 8px !important;
