--- a/styles/partials/page-edit.css
+++ b/styles/partials/page-edit.css
@@ -104,4 +104,4 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px var(--primary-color);
 }
 
 .nav-up ~ #yw-main #ACEditor .btn-toolbar {top:0}
-.nav-down ~ #yw-main #ACEditor .btn-toolbar {top:69px}
+.nav-down ~ #yw-main #ACEditor .btn-toolbar {top:69px} /* this rule is overide by javascript to fit the navbar height */
