--- a/styles/partials/footer.css
+++ b/styles/partials/footer.css
@@ -4,6 +4,7 @@
   padding: 0;
   text-align: center;
   border-bottom: var(--footer-border);
+  position: relative;
 }
 
 .footer a {
@@ -20,7 +21,7 @@
   position: absolute;
   left: 1rem;
   right: 1rem;
-  bottom: 0;
+  bottom: -1rem;
   height: .5rem;
   border-radius: .5rem;
 }
