--- a/styles/partials/general.css
+++ b/styles/partials/general.css
@@ -92,6 +92,7 @@ br + h1, br + h2 {
   h1 { font-size: 2rem; }
   h2 { font-size: 1.4rem; }
   h3 { font-size: 1.2rem; }
+  h4, h5, h6 { color: var(--neutral-color); }
 }
 
 /* Links */
