--- a/styles/partials/general.css
+++ b/styles/partials/general.css
@@ -111,3 +111,6 @@ ul {
 .del, .ace-body .ace_stroke {
   color: var(--secondary-color-2);
 }
+.label {
+  padding: .2em .5em 1px .5em !important;
+}
