--- a/styles/partials/navbar.css
+++ b/styles/partials/navbar.css
@@ -16,9 +16,6 @@
   display: flex;
   align-items: center;
 }
-@media (min-width: 1400px) {
-  #yw-topnav .container { padding: 0 5%; }
-}
 #yw-topnav .links-container {
   flex: 1;
   display: flex;
@@ -29,6 +26,8 @@
   text-align: center;
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 @media (min-width: 801px) {
   #yw-topnav .links-container {
@@ -100,11 +99,11 @@
   font-weight: 600;
 }
 #yw-topnav li a {
-  padding: .9rem 1.4rem;
+  padding: .5rem 1.4rem;
 }
 @media (max-width: 1200px) {
   #yw-topnav li a {
-    padding: 0 .8rem;
+    padding: .3rem .8rem;
   }
 }
 #yw-topnav li a:hover {
