--- a/styles/partials/navbar.css
+++ b/styles/partials/navbar.css
@@ -89,9 +89,20 @@
   margin-top: 15px;
   border-radius: 0 0 5px 5px;
 }
-@media (min-width: 800px) {
-  #yw-topnav .dropdown-menu { font-size: .9rem; }
-  #yw-topnav .btn-menu { display: none; }
+#yw-topnav .dropdown-menu {
+	font-size: .9rem;
+}
+#yw-topnav .btn-menu {
+	display: none;
+}
+
+@media (max-width: 800px) {
+  #yw-topnav .dropdown-menu {
+	font-size: 14px;
+  }
+  #yw-topnav .btn-menu {
+	  display: block;
+  }
 }
 #yw-topnav .dropdown-menu a {
   padding: 2px 20px 6px 15px;
@@ -125,19 +136,19 @@
   opacity: .8;
 }
 #yw-topnav .btn-default, #yw-topnav .btn-default:hover, #yw-topnav .btn-default:focus {
-   background: transparent;
-   border: none;
-   color: var(--neutral-light-color) !important;
+   background: var(--neutral-light-color);
+   border: 1px solid var(--neutral-light-color);
+   color: var(--primary-color) !important;
 }
 #yw-topnav .btn.btn-default.dropdown-toggle:hover {
   color: var(--primary-color) !important;
 }
-@media (min-width: 800px) {
+@media (max-width: 800px) {
   #yw-topnav .btn-default, #yw-topnav .btn-default:hover, #yw-topnav .btn-default:focus {
-    background: var(--neutral-light-color);
-    border: 1px solid var(--neutral-light-color);
-    color: var(--primary-color) !important;
-  }
+	   background: transparent;
+	   border: none;
+	   color: var(--neutral-light-color) !important;
+	}
 }
 #yw-topnav .active-link {
   font-weight: bold;
