--- a/styles/components/forms.css
+++ b/styles/components/forms.css
@@ -52,11 +52,16 @@ textarea.form-control {
   width: auto !important;
   font-weight: 600;
   padding-left: 15px;
-  font-size: .8em;
+  font-size: 1em;
 }
-.form-group:not(.file) .control-label { height: 1.3rem }
+.form-group:not(.file) .control-label {
+  height: auto;
+}
 .form-group.textarea.wiki-textarea {
   margin-top: -10px;
+}
+.form-group.textarea.summernote {
+  padding: 0;
 }
 .form-group:not(.file):not(.checkbox) .control-label,
 .form-group.wrapper.checkbox .control-label {
@@ -65,7 +70,15 @@ textarea.form-control {
   left: 1.7rem;
   background-color: var(--neutral-light-color);
   padding: 0 4px 0 8px;
-  top: -.8em;
+  bottom: calc(100% - 10px);
+}
+.form-group:not(.file):not(.checkbox) .control-label {
+  margin-left: 8px;
+  margin-right: 33px;
+}
+.form-group.wrapper.checkbox .control-label {
+  margin-left: 5px;
+  margin-right: 17px;
 }
 .form-group:not(.file):not(.checkbox) .title-label.control-label,
 .form-group.wrapper.checkbox .title-label.control-label {
@@ -77,7 +90,6 @@ textarea.form-control {
   background: none;
   padding-top: 0;
   margin-bottom: 1rem;
-  font-size: 1rem;
 }
 .form-group:not(.file):not(.checkbox) .control-label:not(.title-label)::before,
 .form-group.wrapper.checkbox .control-label:not(.title-label)::before {
@@ -143,14 +155,18 @@ textarea.form-control {
 .form-group.input.file {
   margin-top: -10px;
 }
+.form-group.input {
+  margin-top: 2.2rem;
+}
 .form-control.wrapper {
   height: auto;
   margin-left: 0px;
   padding-left: 0;
   padding-bottom: 10px;
   margin-bottom: 1.5rem;
-  margin-top: 1.5rem;
+  margin-top: 1.8rem;
 }
+
 select.input-sm {
   font-size: .9em;
   padding: 1px 5px;
@@ -265,6 +281,10 @@ form .col-sm-9 {
   margin-left: .3rem;
   margin-right: 3px;
 }
+.form-group:not(.file):not(.checkbox) .control-label .form-help {
+  margin-left: .6rem;
+}
+
 .input-group-addon:last-child, .input-group-btn:last-child > .btn {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
@@ -313,11 +333,7 @@ form .col-sm-9 {
   input.form-control[type=file]::before { padding: 1px 1rem 0 .8rem; }
 }
 
-@media (max-width: 1200px) {
-  .form-group .control-label { font-size: .9em; }
-}
-
-.form-group.summernote, .form-group.summernote .controls {
+.form-group.summernote .controls{
   padding: 0;
   margin-top: 0;
 }
