--- a/styles/components/buttons.css
+++ b/styles/components/buttons.css
@@ -141,3 +141,13 @@
   opacity: .9;
   border-radius: 2px;
 }
+
+.btn-group-sm > .btn, .btn-sm {
+  padding: .25rem .5rem;
+  font-size: .8rem;
+}
+
+.btn-group-lg > .btn, .btn-lg {
+  padding: 1rem 2rem;
+  font-size: 1.25rem;
+}
