differentes tailles de boutons

--- a/styles/components/buttons.css
+++ b/styles/components/buttons.css
@@ -151,3 +151,19 @@
   padding: 1rem 2rem;
   font-size: 1.25rem;
 }
+
+.btn-xs {
+  padding: 2px 7px !important;
+  font-size: .9em;
+}
+
+.btn-sm {
+  padding: 2px 7px;
+}
+
+.btn-lg {
+  padding: 1em 2em;
+  font-size: 1.2em;
+}
+
+
