--- a/styles/components/buttons.css
+++ b/styles/components/buttons.css
@@ -93,10 +93,6 @@
   color: var(--secondary-color-2);
 }
 
-.btn-xs {
-  padding: 2px 8px !important;
-  border-radius: .3em;
-}
 .btn.btn-xs i {
   margin-right: 0;
 }
@@ -143,27 +139,28 @@
 }
 
 .btn-group-sm > .btn, .btn-sm {
-  padding: .25rem .5rem;
+  padding: 2px 7px;
   font-size: .8rem;
 }
 
 .btn-group-lg > .btn, .btn-lg {
-  padding: 1rem 2rem;
-  font-size: 1.25rem;
+  padding: 0.5rem 1rem;
+  font-size: 2rem;
 }
 
 .btn-xs {
   padding: 2px 7px !important;
+  border-radius: .3em;
   font-size: .9em;
 }
 
-.btn-sm {
-  padding: 2px 7px;
+/* To prevent display trouble in small screen */
+@media (max-width: 800px){
+    a.btn {
+        white-space: normal;
+        word-break: break-word;
+    }
 }
 
-.btn-lg {
-  padding: 1em 2em;
-  font-size: 1.2em;
-}
 
 
