--- a/styles/components/checkboxes-radio.css
+++ b/styles/components/checkboxes-radio.css
@@ -1,6 +1,9 @@
 .checkbox label, .radio label {
   padding-left: 0;
 }
+td > label.checkbox, td > label.radio {
+  display : inline ;
+}
 [type="radio"] + span:not(.lever) {
   font-weight: normal;
 }
@@ -12,13 +15,6 @@
   position: absolute;
   opacity: 0;
   pointer-events: none;
-}
-/* but not for checkbox for diff menu*/
-form[action$="diff"]>table>tbody>tr>td>input[type="checkbox"]:not(:checked), 
-form[action$="diff"]>table>tbody>tr>td>input[type="checkbox"]:checked, form#form-link input[type="checkbox"] {
-    position: initial;
-    opacity: 1;
-    pointer-events: initial;
 }
 
 [type="checkbox"] + span:not(.lever) {
@@ -131,13 +127,6 @@ table.dataTable [type="checkbox"] + span:not(.lever):after {
   position: absolute;
   opacity: 0;
   pointer-events: none;
-}
-/* but not for radio buttons in diff menu*/
-form[action$="diff"]>table>tbody>tr>td>input[type="radio"]:not(:checked), 
-form[action$="diff"]>table>tbody>tr>td>input[type="radio"]:checked, form#form-link input[type="radio"] {
-    position: initial;
-    opacity: 1;
-    pointer-events: initial;
 }
 
 [type="radio"]:not(:checked) + span:not(.lever),
