--- a/styles/components/buttons.css
+++ b/styles/components/buttons.css
@@ -144,8 +144,8 @@
 }
 
 .btn-group-lg > .btn, .btn-lg {
-  padding: 0.5rem 1rem;
-  font-size: 2rem;
+  padding: 10px 40px;
+  font-size: 1.5rem;
 }
 
 .btn-xs {
