--- a/styles/components/bootstrap-components.css
+++ b/styles/components/bootstrap-components.css
@@ -178,8 +178,9 @@
 .panel-heading[data-toggle=collapse]:after {
   content: "";
   position: absolute;
-  top: 1.1em;
+  top: 1.3em;
   right: 1em;
+  border-radius: 3px;
   opacity: .8;
   width: .7rem;
   height: .7rem;
@@ -191,7 +192,7 @@
   transform: rotate(45deg);
 }
 .panel-heading.collapsed[data-toggle=collapse]:after {
-  top: .8em;
+  top: .9em;
   border-top: .17rem solid transparent;
   border-left: .17rem solid transparent;
   border-right: .17rem solid var(--chevron-color);
